--- a/public/styles.css
+++ b/public/styles.css
@@ -121,6 +121,7 @@ input{
     position: absolute;
     bottom: 0;
     left: 1em;
+    width: 80%
 }
 .icons button {
     background-color: #bfa100;
@@ -131,6 +132,7 @@ input{
 .icons button:hover {
     background-color:#ffd700;
 }
+
 
 
 
